adding project -  karaoke Made Easy

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <h2>Work</h2>
       
       <div class="gridContainer">
-        <a href="" class="gridItem surfProject">
+        <a href="https://kvtsira.github.io/karaoke-web-app/" class="gridItem karaokeProject">
           <div>
-            <h3>Surf Report</h3>
+            <h3>Karaoke</h3>
             <span>MERN Stack</span>
           </div>
         </a>
